Fix NOINET[6],!VIMAGE builds after FIB_ALGO addition to GENERIC

Reported by:	jbeich
PR:		255390